Final star alignment fix

--- a/app/javascript/styles/mastodon-bird-ui/stars.scss
+++ b/app/javascript/styles/mastodon-bird-ui/stars.scss
@@ -57,7 +57,6 @@
   background-image: var(--icon-star-detailed-status-action-bar-active) !important;
   background-position: center;
   color: var(--color-yellow);
-  left: unset !important;
   transform: none;
   width: unset;
 }
